[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
# methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
# Using git dependency as a workaround for https://github.com/smartcorelib/smartcore/issues/267
smartcore = { git = "https://github.com/risc0/smartcore.git", rev = "4bd3cadd50ed988c45c239f5264c3e2c2af0a690", features = ["serde"]}
smartcore-ml-methods = { path = "../methods" }
rmp-serde = "1.1"
serde_json = "1.0"